# idub-debugger

./: .clang-format  CMakeLists.txt  README.md
.cache/clangd/index/: baby_vm.cpp.377C2829F911F830.idx
cmake/: time_compare.cmake
common/: debug.h  defer.h  inline.h  musttail.h  opcode_def.hpp  requires.h
documentation/: TODO.md  notatki_na_licencjat.md  oficjalny_plan
documentation/eng/: tldr.md
documentation/pl/: TODO.md
example/: code
example/cool/: collatz_rec  factorial_rec
example/correct/: code1  code2  code3  code4  code5  code6
example/simple/: code1  code10  code2  code3  code4  code5  code6  code7  code8  code9
example/test/: collatz.cpp  factorial.cpp
example/wrong/: label_at_end  no_reg_decl  undefined_function
experimental/: CMakeLists.txt
experimental/macro_magic/: main.cpp
experimental/macro_magic/definitions/: func1.hpp  func2.hpp
experimental/macro_magic/impl/: func1.cpp  func2.cpp
experimental/macro_magic/includes/: func1.hpp  func2.hpp
experimental/macro_magic/utils/: apply_to_all.hpp
experimental/src/: achrono.cpp  exec_termination.cpp  ioio.cpp  sanity_check.cpp
gdb_demo/: CMakeLists.txt  gdb_demo.cpp  gdb_in  gdb_out  presentation.md
script/: build.sh  clean.sh  get_to_root.sh  restart.sh
src/: baby_vm.cpp
src/experimental/: timetravel.cpp  timetravle.cpp
src/sanity_check/: CMakeLists.txt  pack.cpp
src/vm/: baby_vm.cpp
tests/: CMakeLists.txt
tests/dbg_sessions/factorial_dbg/: in  run.sh
utils/: build.sh  clean.sh  get_to_root.sh  restart.sh  run_gdb_demo.sh  show.sh
vm/config/: args.cpp  args.hpp
vm/core/: args.hpp  baby_vm.cpp  biject_map.hpp  code_pos.hpp  config.hpp  debug_data.cpp  debug_data.hpp  exec.cpp  exec.hpp  frame.hpp  func_builder.hpp  function.hpp  heap.cpp  heap.hpp  io_handler.hpp  main.cpp  memory.hpp  parse.cpp  parse.hpp  prnt.cpp  prnt.hpp  thread.cpp  thread.hpp  thread_builder.hpp
vm/debugger/: cli.hpp
vm/memory/: frame.hpp  heap.hpp  io_handler.cpp
vm/opcodes/: boilerplate.hpp  opcode.cpp  opcode.hpp
vm/opcodes/macros/: definitions.hpp  handle_opcodes.hpp
vm/parse/: parse.cpp  parse.hpp  prnt.hpp
vm/src/: baby_vm.cpp
